ci/k8s/app-a/manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-a
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: app-a
spec:
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: rminz/go-app-foo:1.0.8
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: app-a
spec:
  selector:
    app: app
  ports:
  - port: 3000
    targetPort: 3000
